--- a/News.html
+++ b/News.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css_without_content/menu.css">
     <link rel="stylesheet" href="/css_without_content/header.css">
     <link rel="stylesheet" href="/css_without_content/footter.css">
-    <link rel="stylesheet" href="/news_css/news.css" media="all and (min-width: 375px)">
+    <link rel="stylesheet" href="/news_css/news.css">
     <link rel="stylesheet" href="/news_css/news_.mobile.css" media="all and (max-width: 375px)">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -47,7 +47,7 @@
 </header>
 
 <div class="menu">
-    <a class="menu_part" href="/Home.html" title="Homw"><img src="/img/Property 1=home, Property 2=inactive.png" alt=""></a>
+    <a class="menu_part" href="/index.html" title="Homw"><img src="/img/Property 1=home, Property 2=inactive.png" alt=""></a>
     <a class="menu_part" href="#" title="Events"><img src="/img/Property 1=events, Property 2=inactive.png" alt=""></a>
     <a class="menu_part" href="/Music.html" title="Music"><img src="img/Property 1=music, Property 2=inactive.png" alt=""></a>
     <a class="menu_part" href="/Photo.html" title="Photos"><img src="/img/Property 1=photo, Property 2=inactive.png"></a>
@@ -262,7 +262,7 @@
             <text class="footer_text "><text class="footer_text_ED ">ED</text>MUSIC</text>
         </div>
         <div class="links ">
-            <a class="footer_link " href="/Home.html" title="Home">Home</a>
+            <a class="footer_link " href="/index.html" title="Home">Home</a>
             <a class="footer_link " href="#" title="News ">News</a>
             <a class="footer_link " href="/Music.html" title="Music ">Music</a>
             <a class="footer_link " href="/Photo.html" title="Photo ">Photo</a>
