--- a/Music.html
+++ b/Music.html
@@ -48,7 +48,7 @@
     </header>
 
     <div class="menu">
-        <a class="menu_part" href="/Home.html" title="Homw"><img src="/img/Property 1=home, Property 2=inactive.png" alt=""></a>
+        <a class="menu_part" href="/index.html" title="Homw"><img src="/img/Property 1=home, Property 2=inactive.png" alt=""></a>
         <a class="menu_part" href="#" title="Events"><img src="/img/Property 1=events, Property 2=inactive.png" alt=""></a>
         <a class="menu_part" href="#" title="Music"><img src="img/Property 1=music, Property 2=active.png" alt=""></a>
         <a class="menu_part" href="/Photo.html" title="Photos"><img src="/img/Property 1=photo, Property 2=inactive.png"></a>
@@ -711,7 +711,7 @@
                 <!-- Left and right controls -->
             </div>
         </div>
-        <div class="carousel5 ">
+        <div class="carousel5 " style="margin-bottom: 50px;">
             <article class="title">Top djs</article>
             <div id="demo5" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
@@ -995,7 +995,7 @@
             <text class="footer_text "><text class="footer_text_ED ">ED</text>MUSIC</text>
         </div>
         <div class="links ">
-            <a class="footer_link " href="/Home.html" title="Home">Home</a>
+            <a class="footer_link " href="/index.html" title="Home">Home</a>
             <a class="footer_link " href="/News.html" title="News ">News</a>
             <a class="footer_link " href="#" title="Music ">Music</a>
             <a class="footer_link " href="/Photo.html" title="Photo ">Photo</a>
