--- a/Photo.html
+++ b/Photo.html
@@ -47,7 +47,7 @@
     </header>
 
     <div class="menu">
-        <a class="menu_part" href="/Home.html" title="Homw"><img src="/albums/button (1).png" alt=""></a>
+        <a class="menu_part" href="/index.html" title="Homw"><img src="/albums/button (1).png" alt=""></a>
         <a class="menu_part" href="#" title="Events"><img src="/img/Property 1=events, Property 2=inactive.png" alt=""></a>
         <a class="menu_part" href="/Music.html" title="Music"><img src="img/Property 1=music, Property 2=inactive.png" alt=""></a>
         <a class="menu_part" href="#" title="Photos"><img src="/albums/button.png"></a>
@@ -159,7 +159,7 @@
             <text class="footer_text"><text class="footer_text_ED">ED</text>MUSIC</text>
         </div>
         <div class="links">
-            <a class="footer_link " href="/Home.html" title="Home">Home</a>
+            <a class="footer_link " href="/index.html" title="Home">Home</a>
             <a class="footer_link " href="/News.html" title="News ">News</a>
             <a class="footer_link " href="/Music.html" title="Music ">Music</a>
             <a class="footer_link " href="#" title="Photo ">Photo</a>
